# Audioscribe

./: Dockerfile  README.md  requirements.txt  setup.sh
audioscribe/: Dockerfile  docker-compose.yml  requirements.txt  setup.cfg
audioscribe/audioscribe/: __init__.py  cli.py  config.py  exceptions.py  transcriber.py  utils.py
audioscribe/scripts/: create_directories.sh  generate_readme.sh
audioscribe/tests/: test_transcriber.py
