[metadata]
name = audioscript
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = Command-line tool that transcribes audio files into text format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/audioscript
project_urls =
    Bug Tracker = https://github.com/yourusername/audioscript/issues
classifiers =
    Programming Language ::
